# opencnpj-python

./: .gitignore  pyproject.toml  requirements.txt  setup.py  setvenv.sh
docs/: README.md
examples/: exemplo_uso.py
opencnpj_client/: __init__.py  client.py  models.py
